floattohex-react/src/style.css
td.hexDigitCollapsed {
    border: 1px solid black;    
}
td.binaryDigit {
    border: 1px solid black;    
}
td.binaryBreakdown {
    border: 1px solid black;    
}
.bitGroup.odd {
    background-color: #cccccc;
}
.bitGroup.even {
}

/* http://stackoverflow.com/questions/16791851/a-flash-of-color-using-pure-css-transitions */

.hexConverter {
    background-color: transparent;
    border-radius: 20px;
    border-color: #CCCFF1;
    border-width: 2px;
    border-style: solid;
    width: fit-content;
    padding: 5px 20px 5px 20px;
    /* will just apply to the topmost one */
    margin-top: 20px;
}
.hexConverter + .hexConverter {
    margin-top: 30px;
}
.hexConverter h1 {
    font-size: 125%;
    margin-top: 0px;
}

.hexConverter.hexConverterFlash {
    animation-name: flashcolor;
    animation-duration: 500ms;
}

@keyframes flashcolor {
    0% {
        background-color: yellow;
    }
    100% {
        background-color: transparent;
    }
}

td.binaryDigit {
    padding-left: 0.3em;
    padding-right: 0.3em;
}

td.binaryBreakdown {
    padding-left: 0.3em;
}

td.hexDigitCollapsed {
    text-align: center;
}

